<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/back05"
    tools:context="com.coursegame.coursegame.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/main_titile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:id="@+id/large_title"
                android:textSize="70sp"
                android:textColor="@android:color/black"
                android:textStyle="normal|bold"
                android:typeface="normal"
                android:fontFamily="cursive"
                android:gravity="center_horizontal" />

            <TextView
                android:text="Username"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_lable"
                android:textColor="@android:color/black"
                android:gravity="left"
                android:textSize="12sp" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="0px"
                    android:layout_height="0px"/>


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    app:hintEnabled="false"
                    android:nextFocusUp="@id/email"
                    android:nextFocusLeft="@id/email"
                    android:singleLine="true"
                    style="@android:style/Widget.DeviceDefault.EditText" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="Password"
                android:layout_marginLeft="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_lable"
                android:textColor="@android:color/black"
                android:gravity="left"
                android:textSize="12sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@android:style/TextAppearance.Material.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@drawable/abc"
                android:textColor="@android:color/black" />

            <TextView
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/new_account"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
