<resources>
    <string name="app_name">CourseGame</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="main_titile">Course Game</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="register"><u>Create New Account</u></string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_game">Game</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
